Add Lab 10.3: Document Parsing starter code and modernize List usage
Features Added:
- New ragWithDocumentParsing() test with comprehensive TODO guidance
- FileSystemDocumentLoader import and TODO examples for document loading
- Sample document (langchain4j-modern-features.txt) with modern LangChain4j content
- Detailed TODO comments showing complete document processing pipeline
- Structured learning path for file-based RAG implementation

Code Modernization:
- Updated all test methods to use List.of() instead of Arrays.asList()
- Removed unused Arrays imports across all test files
- Added required imports for document parsing (Path, Paths, FileSystemDocumentLoader)
- Updated labs.md with complete Test 10.3 documentation and examples

Educational Structure:
- Test 10.1: Basic vector operations (simple text data)
- Test 10.2: Production RAG (hardcoded knowledge base)
- Test 10.3: Document parsing (realistic file processing)
- Progressive complexity from simple concepts to production patterns
- Modern Java practices throughout

This provides students with a complete spectrum of RAG implementations
from basic concepts to real-world document processing scenarios.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>